--- a/index1.html
+++ b/index1.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <title>Tin tức Việt Nam và quốc tế nóng hổi</title>
-    
+    <link rel="icon" href="/assets1/css/img/dantri.jpg" type="image/x-icon" />
     <link rel="stylesheet" href="./assets1/css/font/fontawesome-free-6.3.0-web/css/all.css">
     <link rel="stylesheet" href="./assets1/css/base.css">
     <link rel="stylesheet" href="./assets1/css/main.css">
